[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/panel_blue.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/ui/TutorialMainPanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[node name="TutorialMainPanel" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="TutorialPanel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -250.0
margin_right = 485.0
margin_bottom = 250.0
rect_min_size = Vector2( 970, 500 )
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="TutorialText" type="Label" parent="TutorialPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -180.0
margin_right = 425.0
margin_bottom = 180.0
rect_min_size = Vector2( 850, 360 )
custom_fonts/font = SubResource( 1 )
text = "Default Text"
autowrap = true

[node name="ButtonContinue" type="Button" parent="TutorialPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
rect_min_size = Vector2( 0, 85 )
custom_fonts/font = SubResource( 2 )
text = "Continue"

[connection signal="pressed" from="TutorialPanel/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
